qmd & htmlfrom working project with vyavahara

--- a/prajJapti.qmd
+++ b/prajJapti.qmd
@@ -209,9 +209,9 @@ We use a fourfold typology for semantic prosody: <code>positive</code>, <code>ne
 Conversely, we annotate semantic prosody as positive if the concept expressed by a lemma is described as positive, or leading to something good etc. In cases where the lemma is negated (e.g. na vikalpayati) or is modified by an adjective with a negative connotation which suggests that some aspects of the concept expressed by the lemma are negative ( but not the concept tout-court, e.g. <i>akuśala-vikalpa</i>), we annotate the semantic prosody as being neutral-negative.
 
 Given the rarity of positive semantic prosody in the vocabulary explored in the Visual Dictionary and Thesaurus of Buddhist Sanskrit we categorize all positive occurrences as pos, even when they would better lend themselves to neu.pos, for analogy with neu.neg above.
-:::
 
-### semantic prosody examples
+
+## examples
 
 #### positive {#sec-examplesemprospos}
 
@@ -232,6 +232,8 @@ Given the rarity of positive semantic prosody in the vocabulary explored in the 
 
 **sarva-*prajñapti*-samatikrāntaṃ lokottaram ity ucyate /**\[suvikrāntavikrāmiparipṛcchā, 4\]\
 "...one speaks of the 'supramundane' as of that which has completely transcended all verbal concepts."\[Conze 5\] "prajñapti68suvikrāntavikrāmiparipṛcchā"
+:::
+
 
 ## <font color='indianred'>examples</font>
 
