--- a/vitarka.qmd
+++ b/vitarka.qmd
@@ -192,9 +192,9 @@ We use a fourfold typology for semantic prosody: <code>positive</code>, <code>ne
 Conversely, we annotate semantic prosody as positive if the concept expressed by a lemma is described as positive, or leading to something good etc. In cases where the lemma is negated (e.g. na vikalpayati) or is modified by an adjective with a negative connotation which suggests that some aspects of the concept expressed by the lemma are negative ( but not the concept tout-court, e.g. <i>akuśala-vikalpa</i>), we annotate the semantic prosody as being neutral-negative.
 
 Given the rarity of positive semantic prosody in the vocabulary explored in the Visual Dictionary and Thesaurus of Buddhist Sanskrit we categorize all positive occurrences as pos, even when they would better lend themselves to neu.pos, for analogy with neu.neg above.
-:::
 
-### semantic prosody examples
+
+## examples
 
 #### negative
 
@@ -223,6 +223,8 @@ Given the rarity of positive semantic prosody in the vocabulary explored in the 
 **satyeṣu duḥkh\^ādiṣu dṛṣṭir āryā samyag-*vitarkaś* ca parākramaś ca / idaṃ trayaṃ jñāna-vidhau pravṛttaṃ prajñ\^āśrayaṃ kleśa-parikṣayāya //** \[saundarananda, 16.31\] "The noble doctrine with respect to the Truths regarding suffering etc., right thought and exertion, these three, resting on intuitive wisdom, should be practised in the department of knowledge for the abolition of the vices." \[Johnston 92\]
 
 **iha dharm\^āvasthā-vido manyante kuśalānāṃ dharmāṇām ekonaviṃśaṃ-śatam / \[...\] *vitarkānāṃ* prīteḥ pramādasya a-prasrabdheḥ /** \[vigrahavyāvartanī, 232\] "In this context, people who know the state of things have the 119 auspicious things in mind. Thus the following are auspicious in one of their aspects: \[...\] (46) utter torment, (47) dissatisfaction, (48) deliberation, (49) pleasure, (50) clarity, \[...\]." \[Westerhoff 22\]
+:::
+
 
 ## <font color='indianred'>examples</font>
 
